# LJGL

./: .gitmodules  CMakeLists.txt  README.md
src/: EBO.h  SSBO.h  VAO.h  VBO.h  assimpModel.h  camera.h  computeShader.h  initHelper.h  instancedModels.h  ljgl.hpp  model.h  shader.h  texture.h  world.h
testLib/: CMakeLists.txt
testLib/src/: test.hpp
testProgram/: CMakeLists.txt  main.cpp
